# idiot

./: .gitignore  Makefile.am  configure.ac
health/: Makefile.am  health-monitor-impl.c  health-monitor-impl.h  main.c  net.piolink.switch.health.conf  net.piolink.switch.health.service.in
lib/: Makefile.am  idiot-mqtt-source.c  idiot-mqtt-source.h  idiot-mqtt.c  idiot-mqtt.h  idiot-publish.c  idiot-publish.h  idiot-subscribe.c  idiot-subscribe.h  idiot-types.h  idiot.h  net.piolink.switch.health.xml  net.piolink.switch.idiot.xml
libidiot/: Makefile.am  idiot-message.c  idiot-message.h  idiot-mqtt.c  idiot-mqtt.h  idiot-publish.c  idiot-publish.h  idiot-types.h  idiot.c  idiot.h
src/: Makefile.am  i-mosquitto-message.c  i-mosquitto-message.h  i-mosquitto.c  i-mosquitto.h  i-mqtt-subscribe.c  i-mqtt-subscribe.h  idiot-dbus.c  idiot-dbus.h  idiot-devinfo-service.c  idiot-devinfo-service.h  idiot-health-service.c  idiot-health-service.h  idiot-mqtt-client-impl.c  idiot-mqtt-client-impl.h  idiot-mqtt-service.c  idiot-mqtt-service.h  main.c  net.piolink.switch.idiot.conf  net.piolink.switch.idiot.service.in
tests/: Makefile.am  cli-test.c  completion-test.c  flex-test.lex  idiot-test.c  invoke-test.c  lex.yy.c
